--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ PyHamcrest==1.9.0
 PyJWT==1.7.1
 python3-openid==3.1.0
 pytz==2019.1
+PyYAML==5.3
 requests==2.22.0
 requests-oauthlib==1.2.0
 six==1.12.0
