--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,7 @@ requests==2.22.0
 requests-oauthlib==1.2.0
 six==1.12.0
 sqlparse==0.3.0
-Twisted==19.7.0
+Twisted>=20.3.0
 txaio==18.8.1
 urllib3==1.25.3
 urwid==2.0.1
