--- a/backend/dataset.yml
+++ b/backend/dataset.yml
@@ -5,3 +5,26 @@ user_data:
     tel: '891234567890'
     birth: '1999-01-01'
     gender: 'M'
+
+user_serialized_data:
+    username: 'Testy'
+    avatar: '/media/person/defaultAvatar.jpg'
+    tel: '891234567890'
+    birth: '1999-01-01'
+    gender: 'M'
+
+
+another_user_data:
+    username: 'Smitte'
+    password: 'strong-password2'
+    avatar: 'person/defaultAvatar.jpg'
+    tel: '891234567891'
+    birth: '1900-10-09'
+    gender: 'F'
+
+another_user_serialized_data:
+    username: 'Smitte'
+    avatar: '/media/person/defaultAvatar.jpg'
+    tel: '891234567891'
+    birth: '1900-10-09'
+    gender: 'F'
