--- a/backend/socket_chat/tests/dialog_consumer/message_events/dataset.yml
+++ b/backend/socket_chat/tests/dialog_consumer/message_events/dataset.yml
@@ -5,9 +5,7 @@ test_send_message_in_dialog_event:
     }}
     successed_response_for_user: {"event": "dialog.message.send", data: {
         # "id": "MESSAGE_ID",
-        "sender": "USER_ID",
-        "sender_name": "USERNAME",
-        "avatar": "AVATAR",
+        "sender": ...sender,
         "chat_id": "DIALOG_ID",
         "text": "some_text",
         "unread": false,
@@ -16,9 +14,7 @@ test_send_message_in_dialog_event:
     }, "status": "ok"}
     successed_response_for_another_user: {"event": "dialog.message.send", data: {
         # "id": "MESSAGE_ID",
-        "sender": "USER_ID",
-        "sender_name": "USERNAME",
-        "avatar": "AVATAR",
+        "sender": ...sender,
         "chat_id": "DIALOG_ID",
         "text": "some_text",
         "unread": false,  # must be true
@@ -33,9 +29,7 @@ test_update_message_in_dialog_event:
     }}
     successed_response: {"event": "dialog.message.update", data: {
         "id": "MESSAGE_ID",
-        "sender": "USER_ID",
-        "sender_name": "USERNAME",
-        "avatar": "AVATAR",
+        "sender": ...sender,
         "chat_id": "DIALOG_ID",
         "text": "new_some_text",
         "unread": false,
