--- a/backend/socket_chat/tests/group_consumer/message_events/dataset.yml
+++ b/backend/socket_chat/tests/group_consumer/message_events/dataset.yml
@@ -1,69 +1,100 @@
 test_send_message_in_group_event:
-    request_data: {"event": "group.message.send", data: {
-        "id": "GROUP_ID",
-        "text": "some_text"
-    }}
-    successed_response_for_user: {"event": "group.message.send", data: {
-        # "id": "MESSAGE_ID",
-        "sender": ...sender,
-        "chat_id": "GROUP_ID",
-        "text": "some_text",
-        "unread": false,
-        "stared": false,
-        "date": "TODAY"
-    }, "status": "ok"}
-    successed_response_for_another_user: {"event": "group.message.send", data: {
-        # "id": "MESSAGE_ID",
-        "sender": ...sender,
-        "chat_id": "GROUP_ID",
-        "text": "some_text",
-        "unread": false,  # must be true
-        "stared": false,
-        "date": "TODAY"
-    }, "status": "ok"}
+  request_data: 
+    event: "group.message.send"
+    data:
+      id: "GROUP_ID"
+      text: "some_text"
+  
+  successed_response_for_user: 
+    event: "group.message.send"
+    data:
+      # "id": "MESSAGE_ID"
+      sender: "SENDER_DATA"
+      chat_id: "GROUP_ID"
+      text: "some_text"
+      unread: false
+      stared: false
+      date: "TODAY"
+    status: "ok"
+
+  successed_response_for_another_user: 
+    event: "group.message.send"
+    data:
+      # id: "MESSAGE_ID"
+      sender: "SENDER_DATA"
+      chat_id: "GROUP_ID"
+      text: "some_text"
+      unread: false  # must be true
+      stared: false
+      date: "TODAY"
+    status: "ok"
 
 test_update_message_in_group_event:
-    request_data: {"event": "group.message.update", data: {
-        "id": "MESSAGE_ID",
-        "text": "new_some_text"
-    }}
-    successed_response: {"event": "group.message.update", data: {
-        "id": "MESSAGE_ID",
-        "sender": ...sender,
-        "chat_id": "GROUP_ID",
-        "text": "new_some_text",
-        "unread": false,
-        "stared": false,
-        "date": "TODAY"
-    }, "status": "ok"}
-    message_does_not_exist_response: {"event": "group.message.update", data: {
-        "detail": "Message doesn't exist"
-    }, "status": "error"}
-    message_is_foreign_response: {"event": "group.message.update", data: {
-        "detail": "You can't update foreign messages"
-    }, "status": "error"}
+  request_data: 
+    event: "group.message.update"
+    data:
+      id: "MESSAGE_ID"
+      text: "new_some_text"
+  
+  successed_response: 
+    event: "group.message.update"
+    data:
+      id: "MESSAGE_ID"
+      sender: "SENDER_DATA"
+      chat_id: "GROUP_ID"
+      text: "new_some_text"
+      unread: false
+      stared: false
+      date: "TODAY"
+    status: "ok"
+
+  message_does_not_exist_response: 
+    event: "group.message.update"
+    data:
+      detail: "Message doesn't exist"
+    status: "error"
+
+  message_is_foreign_response: 
+    event: "group.message.update"
+    data:
+      detail: "You can't update foreign messages"
+    status: "error"
 
 test_delete_message_in_group_event:
-    request_data: {"event": "group.message.delete", data: {
-        "id": "MESSAGE_ID",
-    }}
-    successed_response: {"event": "group.message.delete", data: {
-        "message_id": "MESSAGE_ID",
-        "chat_id": "CHAT_ID"
-    }, "status": "ok"}
-    message_does_not_exist_response: {"event": "group.message.delete", data: {
-        "detail": "Message doesn't exist"
-    }, "status": "error"}
-    message_is_foreign_response: {"event": "group.message.delete", data: {
-        "detail": "You can't delete foreign message"
-    }, "status": "error"}
+  request_data: 
+    event: "group.message.delete"
+    data:
+      id: "MESSAGE_ID"
+  
+  successed_response: 
+    event: "group.message.delete"
+    data:
+      message_id: "MESSAGE_ID"
+      chat_id: "CHAT_ID"
+    status: "ok"
+
+  message_does_not_exist_response: 
+    event: "group.message.delete"
+    data:
+      detail: "Message doesn't exist"
+    status: "error"
+
+  message_is_foreign_response: 
+    event: "group.message.delete"
+    data:
+      detail: "You can't delete foreign message"
+    status: "error"
 
 test_star_message_in_group_event:
-    request_data: {"event": "group.message.star", data: {
-        "id": "MESSAGE_ID",
-        "stared": true
-    }}
-    successed_response: {"event": "group.message.star", data: {
-        "id": "MESSAGE_ID",
-        "stared": true
-    }, "status": "ok"}
+  request_data: 
+    event: "group.message.star"
+    data:
+      id: "MESSAGE_ID"
+      stared: true
+  
+  successed_response: 
+    event: "group.message.star"
+    data:
+      id: "MESSAGE_ID"
+      stared: true
+    status: "ok"
