--- a/backend/socket_chat/tests/dialog_consumer/dataset.yml
+++ b/backend/socket_chat/tests/dialog_consumer/dataset.yml
@@ -1,22 +1,10 @@
-test_create_dialog_event:
-  request_data: 
-    event: "dialog.create"
-    data:
-      id: 2
+dialog_message_data:
+  text: "some_text"
 
-  expected_response: 
-    event: "dialog.create"
-    data:
-      id: 1
-      messages: []
-      interlocutor: 
-        username: "USERNAME"
-        avatar: null
-        birth: null
-        gender: ""
-        tel: ""
-      unread_count: 0
-      last_message: 
-        sender: null
-        text: ""
-    status: "ok"
+create_dialog_request:
+  event: "dialog.create"
+  data: {}
+
+send_message_request: 
+  event: "dialog.message.send"
+  data: {}
