--- a/backend/socket_chat/tests/group_consumer/dataset.yml
+++ b/backend/socket_chat/tests/group_consumer/dataset.yml
@@ -1,70 +1,19 @@
-test_create_group_event:
-  request_data: 
-    event: "group.create"
-    data: 
-      name: "test_group"
-      slug: "test_group_slug"
-      description: "test_group_description"
-  
-  expected_response: 
-    event: "group.create"
-    data: 
-      id: "ID"
-      name: "test_group"
-      slug: "test_group_slug"
-      img: null
-      description: "test_group_description"
-      messages: []
-      members:
-      -
-        person: "USER_DATA"
-        date_joined: "TODAY"
-        role: "A"
-      unread_count: 0
-      last_message: 
-        sender: null
-        text: "" 
-    status: "ok"
-      
-  group_with_given_slug_already_exist_response: 
-    event: "group.join"
-    data:
-      detail: "This Slug `{given_slug}` has already taken"
-    status: "error"
+group_message_data:
+  text: "some_text"
+
+group_create_request:
+  event: "group.create"
+  data:
+    name: "test_group"
+    slug: "test_group_slug"
+    description: "test_group_description"
   
 
-test_join_in_group_event:
-  request_data: 
-    event: "group.join"
-    data:
-      id: "ID"
+group_join_request: 
+  event: "group.join"
+  data: {}
 
-  successed_response: 
-    event: "group.join"
-    data:
-      id: "ID"
-      name: "test_group"
-      slug: "test_group_slug"
-      img: null
-      description: "test_group_description"
-      messages: []
-      members:
-      -
-        person: "USER_DATA"
-        date_joined: "TODAY"
-        role: "A"
-      -
-        person: "ANOTHER_USER_DATA"
-        date_joined: "TODAY"
-        role: "S"
-      unread_count: 0
-      last_message: 
-        sender: null
-        text: "" 
-    status: "ok"
-
-  group_does_not_exist_response: 
-    event: "group.join"
-    data:
-      detail: "Group with given slug or id does not exist"
-    status: "error"
+messsage_send_request:
+  event: "group.message.send"
+  data: {}
+   
