fixed pytest warnings and performance, update r...
...equirement.txt

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,7 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = config.settings
-
 python_files = tests.py test_*.py *_tests.py
+
+DJANGO_SETTINGS_MODULE = config.settings
+addopts = --reuse-db
+filterwarnings =
+    ignore:.*It is strongly recommended that you pass in a value for the "algorithms" argument when calling decode().*:DeprecationWarning
