--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ Django==2.2.13
 django-allauth==0.39.1
 django-cors-headers==3.0.2
 django-filter==2.2.0
-django-filters==0.2.1
+django-filters>=2.4.0
 django-templated-mail==1.1.1
 django-webpack-loader==0.6.0
 djangorestframework==3.10.1
